--- a/static/css/common.css
+++ b/static/css/common.css
@@ -2,8 +2,28 @@
   margin: 0;
   padding: 0;
 }
+*[commonColor]{
+  background-color: #172035!important;
+}
 a{
   text-decoration: none;
+}
+.clear:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+.fl{
+  float: left;
+}
+.fr{
+  float: right;
+}
+.tl{
+  text-align: left;
+}
+.tr{
+  text-align: right;
 }
 ul,li,ol{
   list-style: none;
@@ -27,4 +47,20 @@ body{
   top: 0;
   left: 0;
   width: 100%;
+}
+.null-wrap{
+  position: relative;
+  height: 3rem;
+  background: url(/static/images/null.png) no-repeat center 80%;
+  background-size: 2rem;
+}
+.null-wrap:after {
+  position: absolute;
+  content: '暂无数据';
+  bottom: -14px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  font-size: 14px;
 }
