--- a/static/css/common.css
+++ b/static/css/common.css
@@ -31,6 +31,17 @@ ul,li,ol{
 body{
   font-size: 16px;
 }
+input,select,option{
+  background-color: transparent;
+  border: none;
+}
+input:focus,select:focus{
+  outline: none;
+}
+button[primary]{
+  background-color: #0297e2;
+  color: #ffffff;
+}
 .icon-mobile {
   background: url("/static/images/Mobile-phone-number.png") no-repeat;
   background-size: contain;
