--- a/static/css/common.css
+++ b/static/css/common.css
@@ -42,6 +42,21 @@ button[primary]{
   background-color: #0297e2;
   color: #ffffff;
 }
+.logo{
+  display: inline-block;
+  width: 0.8rem;
+  height: 0.8rem;
+  background: url("/static/images/login.png") no-repeat;
+  background-size: 100% 100%;
+}
+@keyframes ufo {
+  0% {
+    transform: translateY(5px);
+  }
+  100% {
+    transform: translateY(-5px);
+  }
+}
 .icon-mobile {
   background: url("/static/images/Mobile-phone-number.png") no-repeat;
   background-size: contain;
