--- a/static/css/common.css
+++ b/static/css/common.css
@@ -93,6 +93,21 @@ button[primary]{
 .icon{
   display: inline-block;
 }
+.question {
+  position: relative;
+}
+.question:after{
+  width: 0.8rem;
+  height: 0.8rem;
+  line-height: 0.8rem;
+  text-align: center;
+  border-radius: 50%;
+  display: inline-block;
+  content: '?';
+  font-size: 0.3rem;
+  color: #638bd4;
+  border: solid 1px #638bd4;
+}
 .triangle-up {
   width: 0;
   height: 0;
