国际化  引入vue-u18n，需要npm install

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -83,6 +83,7 @@ button[primary]{
 .null-wrap:after {
   position: absolute;
   content: '暂无数据';
+  content: attr(nullWords);
   bottom: -14px;
   left: 0;
   width: 100%;
